# Concat

./: .gitignore  .gitmodules  CMakeLists.txt  output.txt  readme.md  std.concat  test.py
editor/: Concat.vim  SBIMCL.vim  concat.vim
examples/: BasicMaths.SBIMCL  BasicMaths.SBIMCL_BIN  BasicMaths.concat  BasicMaths_TEST.txt  BitwiseAndLogical_TEST.txt  Conditionals.SBIMCL  Conditionals_TEST.txt  EscapeCodes.concat  EscapeCodes_TEST.txt  FibonacciSeries.SBIMCL  FibonacciSeries.SBIMCL_BIN  FibonacciSeries.concat  FibonacciSeries_TEST.txt  FizzBuzz.CONCAT  FizzBuzz.SBIMCL  FizzBuzz.SBIMCL_BIN  FizzBuzz.concat  FizzBuzz_TEST.txt  IntError.SBIMCL  IntError_TEST.txt  Macros.SBIMCL  Macros_TEST.txt  MemoryAccess.SBIMCL  NoLoopFizzBuzz.SBIMCL  Print1000Poorly.SBIMCL  Print1000Poorly_TEST.txt  PrintError_TEST.txt  Rule110.CONCAT  Rule110.SBIMCL  Rule110.SBIMCL_BIN  Rule110.concat  Rule110Variable.concat  Rule110Variable_TEST.txt  Rule110_TEST.txt  SwapOverRot.SBIMCL  SwapOverRot_TEST.txt  UserInput.concat  WhileLoops.SBIMCL  WhileLoops_TEST.txt  basic.SBIMCL  (+1 more)
src/: Builder.cpp  Builder.hpp  Compiler.cpp  Compiler.hpp  Error.cpp  Error.hpp  Filetypes.hpp  Keywords.hpp  Lexer.cpp  Lexer.hpp  Main.cpp  OpCodes.hpp  Options.cpp  Options.hpp  Program.cpp  Program.hpp  SP.hpp  SmartPointer.hpp  Tokens.hpp  VM.cpp  VM.hpp  Value.cpp  Value.hpp  VirtualMachine.cpp  VirtualMachine.hpp
tests/: AddError.SBIMCL  AddError.SBIMCL_BIN  AddError_TEST.txt  Basic.SBIMCL_BIN  Basic.concat  BasicMaths.SBIMCL  Basic_TEST.txt  Bitshift.SBIMCL_BIN  Bitshift.concat  Bitshift_TEST.txt  BitwiseAndLogical.SBIMCL_BIN  BitwiseAndLogical.concat  BitwiseAndLogical_TEST.txt  Cast.concat  Cast_TEST.txt  Character.SBIMCL  Character.SBIMCL_BIN  Character.concat  Character_TEST.txt  Conditionals.SBIMCL  Conditionals.SBIMCL_BIN  Conditionals.concat  Conditionals_TEST.txt  Const.concat  Const_TEST.txt  FizzBuzz.SBIMCL  Func.concat  Func_TEST.txt  Include1.concat  (+46 more)
(+12 files in other folders)
